--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,4 +1,9 @@
-app = "gba-dream-link"
+# fly.toml app configuration file generated for interstellar-radio-link on 2023-12-10T10:03:38-06:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = "interstellar-radio-link"
 primary_region = "ord"
 
 [build]
@@ -14,3 +19,8 @@ primary_region = "ord"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
